Moved to branch

--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 	<div id="draggable" class="ui-widget-content"><p>Draggable</p></div>
-	<div id="dropable" class="ui-widget-header"><p>Drop Here</p></div>
+	<div id="dropable" class=""><p>Drop Here</p></div>
 </body>
 </html>
