--- a/index1.html
+++ b/index1.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+	<script src="jquery-3.4.0.js"></script>
+	<link rel="stylesheet" href="jquery-ui-1.12.1/jquery-ui.css">
 	<link rel="stylesheet" href="estilo.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
 	<script src="main.js"></script>
 	<title>Juego 1</title>
 </head>
