--- a/Juego1/index1.html
+++ b/Juego1/index1.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="jquery-ui-1.12.1/jquery-ui.css">
 	<link rel="stylesheet" href="estilo.css">
 	<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
+	<script src="https://code.responsivevoice.org/responsivevoice.js?key=lpPUrSsm"></script>
 	<script src="main.js"></script>
+
 	<title>Juego 1</title>
 </head>
 <body>
