Arreglados juegos pablo

--- a/Juego2/index.html
+++ b/Juego2/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="estilo.css">
 	<script src="jquery-ui-1.12.1/jquery-ui.min.js"></script>
 	<script src="main.js"></script>
+	<script src="https://code.responsivevoice.org/responsivevoice.js?key=lpPUrSsm"></script>
 	<title>Juego 2</title>
 </head>
 <body>
