Juego 2 funcionando con teclado

--- a/Juego2/index.html
+++ b/Juego2/index.html
@@ -15,6 +15,7 @@
 	<div class="container">
 		<p class="titulo">¿Cúantas manzanas hay en el suelo?</p>
 		<div class="number-container"></div>
+		<div id="modalError">¡Vuelve a intentarlo!</div>
 		<div id="grass"></div>
 	</div>
 </body>
