--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
 	<meta charset="utf-8">
 	<title>Juegos</title>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<link rel="stylesheet" type="text/css" href="estiloindex.css">
+	<script type="text/javascript" src="funciones.js"></script>
 </head>
 <body>
 	<h1>Juegos</h1>
 	<section>
 		<div>
-			<div class="enlaces" onclick="window.location='Ordenar/ordenar.html';">
+			<div class="enlaces" onclick="window.location='Ordenar/ordenar.html';" tabindex="1">
 				<img src="icono-comparar-valores.png">
 				<h2>Ordenar números</h2>
 			</div>
 		</div>
 		<div>
-			<div class="enlaces" onclick="window.location='Juego2/index.html';">
+			<div class="enlaces" onclick="window.location='Juego2/index.html';" tabindex="2">
 				<img src="contar_fb.png">
 				<h2>Contar objetos</h2>
 			</div>
 		</div>
 		<div>
-			<div class="enlaces" onclick="window.location='Juego1/index1.html';">
+			<div class="enlaces" onclick="window.location='Juego1/index1.html';" tabindex="3">
 				<img src="maxresdefault.jpg">
 				<h2>Formas geométricas</h2>
 			</div>
